Add cloud functions for automated Vercel rebuilds
- Create onFirestoreWrite function to trigger on any Firestore change
- Add triggerDeployment function for manual triggering
- Include deployment script and documentation
- Functions will trigger Vercel rebuild when CMS content updates

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
-    "seed": "tsx scripts/seed.ts"
+    "seed": "tsx scripts/seed.ts",
+    "deploy:functions": "node scripts/deploy-functions.js"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
