``` feat(seo): add comprehensive metadata and page-specific SEO optimization
- Add metadataBase, title template, and enhanced description to root layout
- Add keywords, authors, OpenGraph, Twitter Card, and robots metadata to root layout
- Add page-specific metadata exports to adoptions, registration, contact, FAQ, and vet services pages
- Update lint scripts to use eslint directly instead of next lint
- Add @eslint/eslintrc dependency
- Remove console.log statements from registration page and admin

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
     "type-check": "tsc --noEmit",
     "seed": "tsx scripts/seed.ts",
     "deploy:functions": "node scripts/deploy-functions.js"
@@ -38,6 +38,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@types/node": "^25.0.3",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
